第二次提交  login and register finished

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,22 @@ mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.type-aliases-package=com.yuanfang.forum.pojo
 mybatis.configuration.use-generated-keys=true
 mybatis.configuration.map-underscore-to-camel-case=true
+
+# Mail Properties
+# SMTP?????
+spring.mail.host=smtp.qq.com
+# SMTP??????
+spring.mail.port=465
+# ????????????
+spring.mail.username=2717180080@qq.com
+# ???????????????????????
+spring.mail.password=aylyxhpvtuhydgbf
+# SMTP????????
+# SMTPS?SMTP-over-SSL??SMTP????SSL??????????????????SSL???????????????????????????
+spring.mail.protocol=smtps
+# ??ssl ??503??
+spring.mail.properties.mail.smtp.ssl.enable=true
+
+# forum
+forum.path.domain=http://localhost:9090
+forum.path.upload=C:/YuanFang/data/upload
