--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,3 +31,14 @@ spring.mail.properties.mail.smtp.ssl.enable=true
 # forum
 forum.path.domain=http://localhost:9090
 forum.path.upload=C:/YuanFang/data/upload
+
+# RedisProperties
+spring.redis.database=11
+spring.redis.host=localhost
+spring.redis.port=6379
+
+# KafkaProperties
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=forum-consumer-group
+spring.kafka.consumer.enable-auto-commit=true
+spring.kafka.consumer.auto-commit-interval=3000
